--- a/historia.html
+++ b/historia.html
@@ -18,10 +18,12 @@
             <div class="divUl">
                 <ul>
                     <li class="liNavBar"><a class="current" href="../public/index.html">INICIO</a></li>
-                    <li class="liNavBar" onclick="scrollHistoria()">HISTORIA</li>
-                    <li class="liNavBar" onclick="scrollHabilidade()">HABILIDADES</li>
-                    <li class="liNavBar">SKINS</li>
-                    <li class="liNavBar">GALERIA</li>
+                    <li class="liNavBar" onclick="scrollHistoria()"><a class="current" href="../public/historia.html">HISTORIA</a></li>
+                    <li class="liNavBar"><a class="current" href="../public/index.html">HABILIDADES</a></li>
+                    <li class="liNavBar">
+                        <a class="current" href="../public/historia.html"></a>SKINS</li>
+                    <li class="liNavBar">
+                        <a class="current" href="../public/historia.html"></a>GALERIA</li>
                 </ul>
             </div>
             <div class="divLogin">
@@ -32,9 +34,10 @@
         </div>
     </section>
     <!--Fim da NavBar-->
+    <!--BACKGROUND-->
     <section class="secBackGround">
-
     </section>
+    <!--FIM BACKGROUND-->
 </body>
 
 </html>
